Fixed sun image

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       Our sun is about 865,370 miles (or 1,392,678 km) in diameter. If we reduced its size by a factor of about 15,000 times, it would be 60 feet across &ndash; the same diameter across as the Sun patio you are standing on. It would also extend 30 feet into the ground and 30 feet into the air &ndash; about the height of the library. The Sun is almost perfectly round, so our Sun patio represents a cross-section of the Sun at any angle. </h3>
 
      <div class="demo">
-      <img src="/images/sun.jpg" />
+      <img src="images/sun.jpg" />
 	    <ar-button
         id="ar-button"
         src="https://betalibhosting.com/assets/sun.glb"
