--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 	Stand at the west edge of the Sun patio and look for a small round concrete marker along the path about 25 feet away. This is Mercury. If we shrink Mercury by the same factor that we did for the Sun, it would be about 2.5 inches in size. Next to the 60-foot Sun patio, you can see how small Mercury is compared to the Sun. The sizes of the Sun and the 8 planets on our solar system walk are all the same scale. However, the distances we use are shrunk even further. If we didn't, the Mercury model would be a half mile away from the Sun patio! So, we shrink the distance scale even more, by a factor of another 100 times. </h3>
 
 	<div class="demo">
-	   <img src="/images/mercury.jpg" />
+	   <img src="images/mercury.jpg" />
 	   <ar-button
        id="ar-button"
 	   src="https://betalibhosting.com/assets/mercury.glb"
@@ -112,7 +112,7 @@
 	<h3 style="margin-top: 0">
 	The average distance of Venus from the Sun is about twice that of Mercury. Our reduced distance scale puts the Venus model at about 47 feet from the Sun patio, but it should be almost 1 mile away. </h3>
 	<div class="demo">
-	   <img src="/images/venus.jpg" />
+	   <img src="images/venus.jpg" />
 	   <ar-button
        id="ar-button"
 	   src="https://betalibhosting.com/assets/venus.glb"
@@ -145,7 +145,7 @@
 	 Planet Earth orbits the Sun on average about 93,000,000 miles away. Our Earth model is 64 feet from the Sun patio but should be 6,400 feet away near the baseball field at Seminole High School. Notice that Earth and its sister planet Venus are the same size.
 	</h3>
     <div class="demo">
-	   <img src="/images/earth.jpg" />
+	   <img src="images/earth.jpg" />
 	   <ar-button
        id="ar-button"
 	   src="https://betalibhosting.com/assets/earth.glb"
@@ -178,7 +178,7 @@
 	 In our scale model of the solar system, Mars is 98 feet from the Sun. Mars should really be almost 2 miles away in Boca Ciega Millennium Park. Luckily, the four giant planets are within walking distance if we continue down the path.
 	</h3>
    <div class="demo">
-	   <img src="/images/mars.jpg" />
+	   <img src=images/mars.jpg" />
 	   <ar-button
        id="ar-button"
 	   src="https://betalibhosting.com/assets/mars.glb"
@@ -211,7 +211,7 @@
  </h3>
 
     <div class="demo">
-	   <img src="/images/jupiter.jpg" />
+	   <img src="images/jupiter.jpg" />
 	   <ar-button
        id="ar-button"
 	   src="https://betalibhosting.com/assets/jupiter.glb"
@@ -244,7 +244,7 @@
 	Walk past the pavilion along the pond to find a model of Saturn and some of its rings. Saturn is about 615 feet away from the Sun patio but should be located over 11.6 miles away, near the St. Petersburg Pier. The planet of Saturn is slightly smaller than Jupiter, but its ring system is quite large. The ring you see in the model is actually 4 ring systems (A, B, C and D).&nbsp; If we included every ring observed by spacecraft, our model would extend anywhere from 40 feet across to as much as ten times that distance. You can see why we are only representing the innermost rings.
 	</h3>
 	<div class="demo">
-	   <img src="/images/saturn.jpg" />
+	   <img src="images/saturn.jpg" />
 	   <ar-button
        id="ar-button"
       src="https://www.betalibhosting.com/assets/saturn4.glb"
@@ -284,7 +284,7 @@
 	</h3>
 
 	  <div class="demo">
-	    <img src="/images/uranus.png" />
+	    <img src="images/uranus.png" />
 	    <ar-button
         id="ar-button"
 	    src="https://betalibhosting.com/assets/uranus.glb"
@@ -319,7 +319,7 @@
 	</h3>
 
 	  <div class="demo">
-	    <img src="/images/neptune.jpg" />
+	    <img src="images/neptune.jpg" />
 	    <ar-button
         id="ar-button"
 	    src="https://betalibhosting.com/assets/neptune.glb"
@@ -354,7 +354,7 @@
      <h2>Thank you for exploring! </h2>
 	 <hr />
       <div class="demo">
-      <img src="/images/astronaut.jpg" />
+      <img src="images/astronaut.jpg" />
       <ar-button
         id="ar-button"
         src="https://github.com/leoncvlt/ar-button/raw/master/assets/Astronaut.glb"
