--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 	 In our scale model of the solar system, Mars is 98 feet from the Sun. Mars should really be almost 2 miles away in Boca Ciega Millennium Park. Luckily, the four giant planets are within walking distance if we continue down the path.
 	</h3>
    <div class="demo">
-	   <img src=images/mars.jpg" />
+	   <img src="images/mars.jpg" />
 	   <ar-button
        id="ar-button"
 	   src="https://betalibhosting.com/assets/mars.glb"
